hard-gists/5596077/run.log
=== Docker Run Log for 5596077 ===
Started at: Mi 29. Okt 15:45:50 CET 2025

[2025-10-29 15:45:51] START: Running container for 5596077
[2025-10-29 15:45:51] SUCCESS: Container d9408accce5948928fb79487fab2e03951ddd5c029019b89164b9c835cb783fd started for 5596077
=== Container logs for 5596077 ===
  File "/snippet.py", line 43
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 5596077 ===
[2025-10-29 15:45:53] INFO: Container d9408accce5948928fb79487fab2e03951ddd5c029019b89164b9c835cb783fd has stopped
